--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,19 @@
 .box {
   border: 1px solid black;
   height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 400%;
+}
+.btn {
+  margin-top: 30px;
+  position: absolute;
+  left: 50%;
+  right: -50%;
+  transform: translate(-50%, -50%)
+}
+body {
+  background-color: gray;
 }
